<?xml version="1.0"?>
<package>
  <name>benchmark_software_launcher</name>
  <version>0.0.1</version>
  <description>The benchmark_software_launcher package launches the intervention software architecture to test through the benchmark platform</description>

  <author email="perezsolerj@gmail.com">Javier Perez</author>
  <maintainer email="perezsolerj@gmail.com">Javier Perez</maintainer>

  <license>GPL</license>

  <url type="website">TODO</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>esm_tracking</build_depend>
  <build_depend>visp</build_depend>
  <build_depend>uwsimbenchmarks</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>visp_bridge</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>esm_tracking</run_depend>
  <run_depend>visp</run_depend>
  <run_depend>uwsimbenchmarks</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>visp_bridge</run_depend>


    <export>
    </export>
</package>
